--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "@types/react-slick": "^0.23.10",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
@@ -19,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-slick": "^0.29.0",
+    "swiper": "^9.2.4",
     "typescript": "5.0.4"
   },
   "devDependencies": {
